# biosimulations

./: .all-contributorsrc  .dockerignore  .env.dev  .eslintrc.json  .flake8  .gitignore  .lintstagedrc  .prettierignore  .prettierrc  .releaserc  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES  DEPENDENCIES-LICENSES  Dockerfile  Dockerfile.frontend  DockerfilePython  Dockerfile_heroku  LICENSE  LICENSE-DEPENDENCIES  LICENSE.md  License.md  PRIVACY_POLICY.md  Pipfile  README.md  TERMS_OF_SERVICE.md  angular.json  commitlint.config.js  config.example.json  crbmviz_dockerfile  declarations.d.ts  decorate-angular-cli.js  docker-compose.yml  heroku.yml  index.html  (+17 more)
apps/combine-api/: .gitignore  Dockerfile  README.md  clear-cache.sh  delete-env.sh  install-deps.sh  install-smoldyn.sh  job.sh  project.json  pyproject.toml  run-tests-in-docker-container.sh  uninstall.sh
apps/combine-api/Dockerfile-assets/: Pipfile  xvfb-startup.sh
apps/combine-api/combine_api/: app.py  app_config.py  install-smoldyn.sh  s3.py
apps/combine-api/src/: __main__.py  app.py  exceptions.py  s3.py  utils.py
apps/combine-api/tests/: test_app.py  test_health.py  test_s3.py  test_swagger_app.py  test_utils.py
apps/simdata-api/: .env.default  .flake8  Dockerfile  README.md  local_docker_build.sh  mypy.ini  project.json  pyproject.toml  run-tests-in-docker-container.sh
apps/simdata-api/local_data/: repressilator_copasi.h5
docs/: .pages  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dependencies.md  GOVERNANCE.md  PRIVACY_POLICY.md  README.md  SECURITY.md  coverage.html  index.html  index.md  license.html  mkdocs.yml  modules.html  overview.html  pyproject.toml  requirements.txt  routes.html
docs/about/: .pages  citations.md  contact.md  cookies.md  dependencies.md  funding.md  license.md  license.template.md  privacy.md  security.md  team.md  terms.md
docs/api-docs/: .pages  biosimulators_utils.md
docs/classes/: Algorithm.html  AlgorithmParameter.html  AppPage.html  ChangedParameter.html  ChartType.html  ChartTypeDataField.html  Format.html  Identifier.html  JournalReference.html  License.html  Model.html  ModelParameter.html  ModelParameterChange.html  ModelVariable.html  OntologyTerm.html  ParameterChange.html  Person.html  Project.html  ProjectProduct.html  RemoteFile.html  Simulation.html  SimulationResult.html  Simulator.html  Taxon.html  TimePoint.html  Timecourse.html  User.html  UserMetadata.html  UtilsService.html  Visualization.html  VisualizationDataField.html  VisualizationLayoutElement.html  VisualizationSchema.html
docs/community/: .pages  CONTRIBUTORS.md  contributing.md  contributors.md  dependencies.md  funding.md  governance.md  license.md  privacy.md  team.md  terms.md
docs/components/: AboutComponent.html  AccountMenuComponent.html  AlertComponent.html  AppComponent.html  Auth0CallbackComponent.html  AuthorsComponent.html  BrowseComponent-1.html  BrowseComponent-2.html  BrowseComponent-3.html  BrowseComponent-4.html  BrowseComponent.html  CallbackComponent.html  ChartTypeCardsComponent.html  ChartTypesComponent.html  ChartTypesGridComponent.html  DataComponent.html  DataTableComponent.html  EditComponent-1.html  EditComponent-2.html  EditComponent-3.html  EditComponent-4.html  EditComponent.html  Error404Component.html  FeedbackComponent.html  FileEditComponent.html  FileTableComponent.html  FooterComponent.html  FourComponent.html  GridCardComponent.html  GridComponent.html  HelpComponent.html  HomeComponent.html  HomeImageComponent.html  HyperLinkComponent.html  HyperlinkComponent.html  IdRendererGridComponent.html  IdRouteRendererGridComponent.html  LinksComponent.html  LogoComponent.html  ModelCardsComponent.html  (+38 more)
docs/concepts/: .pages  Experiments.md  Images.md  Interfaces.md  Metadata.md  Reports.md  Specifications.md  Tools.md  Visualizations.md  experiments.md  images.md  interfaces.md  logs.md  metadata.md  tools.md  visualizations.md
docs/dev/: .pages
docs/developers/: .pages  conduct.md  index.md  nx-tutorial.md  source-code.md
docs/guards/: AuthGuard.html
docs/injectables/: AlertService.html  AuthService.html  BreadCrumbsService.html  ChartTypeService.html  DataService.html  FileService.html  GridService.html  MetadataService.html  ModelService.html  ProjectService.html  SimulationResultsService.html  SimulationService.html  StatsService.html  UserService.html  UtilsService.html  VisualizationService.html  VisualizationsService.html
docs/interceptors/: AuthInterceptorService.html
docs/interfaces/: NavItem.html  Node.html  OkCancelDialogData.html  PersonInterface.html  TopLevelResource.html
docs/js/: menu-wc.js
docs/miscellaneous/: enumerations.html  functions.html  variables.html
docs/modules/: AboutModule.html  AboutRoutingModule.html  AccountModule.html  AccountRoutingModule.html  AppModule.html  AppRoutingModule.html  ChartTypesModule.html  ChartTypesRoutingModule.html  MaterialModule.html  ModelsModule.html  ModelsRoutingModule.html  ProjectsModule.html  ProjectsRoutingModule.html  SharedModule.html  SimulateModule.html  SimulateRoutingModule.html  SimulationsModule.html  SimulationsRoutingModule.html  UserModule.html  UserRoutingModule.html  VisualizationsModule.html  VisualizationsRoutingModule.html  VisualizeModule.html  VisualizeRoutingModule.html
docs/pipes/: FilterPipe.html  FormatTimeForHumansPipe.html  ScientificNotationPipe.html
docs/snippets/: glossary.md  supportedLanguages.md  supportedSedml.md  vega-examples.md  vega-resources.md
docs/stylesheets/: theme.css
docs/users/: .pages  FAQ.md  TERMS_OF_SERVICE.md  about.md  api.md  author-guide.md  biosimulations-packages.md  biosimulators-packages.md  creating-projects.md  creating-tools.md  creating-vega-visualizations.md  developer-guide.md  faqs.md  finding-tools.md  index.md  live-tutorials.md  publishing-projects.md  publishing-tools.md  resources.md  simulating-projects.md  source-model-repositories.md  tutorial.md  user-guide.md  validating-projects.md  viewing-projects.md
(+6080 files in other folders)
