[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Jim Schaff <schaff.jim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.1.6"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-awesome-pages-plugin = "^2.9.0"
mkdocs-redirects = "^1.2.0"
mkdocs-same-dir = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
