[tool.poetry]
name = "combine2-api"
version = "0.1.0"
description = "like combine-api but with fewer dependencies and easier to build"
authors = ["Jim Schaff <schaff.jim@gmail.com>"]
readme = "README.md"
packages = [{include = "combine_api"}]

[tool.poetry.dependencies]
python = "^3.10" # "^3.9"
flask = ">=2"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
openapi-schema-validator = "^0.4.3"
requests = "2.31.0"
botocore = "^1.29.89"
python-dotenv = "^0.14.0"
orjson = "^3.8.7"
flask-cors = "^3.0.10"
pyyaml = "^6.0"
boto3 = "^1.26.89"
biosimulators_utils = {extras = ["bngl", "cellml", "lems", "logging", "neuroml", "sbml"], version = "^0.1.181"}
# biosimulators_utils = {extras = ["bngl", "cellml", "lems", "logging", "neuroml", "sbml", "smoldyn"], version = "^0.1.181"}
parameterized = "^0.8.1"
pytest = "^7.2.2"
swagger-ui-bundle = "^0.0.9"
python-libsbml = "^5.19.7"
types-flask = "^1.1.6"
libcellml = "^0.4.0"
openapi-spec-validator = "^0.5.5"
typed-dotenv = "^1.0.1"
stringcase = "^1.2.0"
boto3-type-annotations = "^0.3.1"
openapi-core = "^0.17.0"
py-swagger-ui = "^1.1.0"
gunicorn = "^20.1.0"
biosimulators-copasi = "^0.1.35"
biosimulators-gillespy2 = "^0.1.37"
biosimulator-processes = "0.0.14"
biosimulators-simularium = ">=0.5.7"
# python-libnuml = "1.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
flake8 = "^6.0.0"

[tool.poetry.group.types.dependencies]
types-flask = "^1.1.6"
types-requests = "^2.28.11.15"
types-orjson = "^3.6.2"
types-botocore = "^1.0.2"
types-pyyaml = "^6.0.12.8"
types-flask-cors = "^3.0.10.3"
types-boto3 = "^1.0.2"
types-python-dateutil = "^2.8.19.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
