[tool.poetry]
name = "combine2-api"
version = "0.1.0"
description = "like combine-api but with fewer dependencies and easier to build"
authors = ["Jim Schaff <schaff.jim@gmail.com>"]
readme = "README.md"
packages = [{include = "combine_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.1.2"  # Latest compatible with Python 3.11
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}  # Already latest compatible
openapi-schema-validator = "^0.4.3"  # No updates required
requests = "^2.28.1"  # Updated for Python 3.11 compatibility
botocore = "^1.29.89"  # No updates required
python-dotenv = "^0.14.0"  # Updated for Python 3.11 compatibility
orjson = "^3.8.7"  # No updates required
flask-cors = "^3.0.10"  # No updates required
pyyaml = "^6.0"  # No updates required
boto3 = "^1.26.89"  # No updates required
biosimulators_utils = {extras = ["bngl", "cellml", "lems", "logging", "neuroml", "sbml", "smoldyn"], version = "^0.1.181"}  # No updates required
parameterized = "^0.8.1"  # No updates required
pytest = "^7.2.2"  # No updates required
swagger-ui-bundle = "^0.0.9"  # No updates required
python-libsbml = "^5.19.7"  # No updates required
types-flask = "^1.1.6"  # No updates required
libcellml = "^0.4.0"  # No updates required
openapi-spec-validator = "^0.5.5"  # No updates required
typed-dotenv = "^1.0.1"  # No updates required
stringcase = "^1.2.0"  # No updates required
boto3-type-annotations = "^0.3.1"  # No updates required
openapi-core = "^0.17.0"  # No updates required
py-swagger-ui = "^1.1.0"  # No updates required
gunicorn = "^20.1.0"  # No updates required
biosimulators-copasi = "^0.1.35"  # No updates required
biosimulators-gillespy2 = "^0.1.37"  # No updates required
# biosimulator-processes = "0.0.14"  # Commented out, no update
biosimulators-simularium = ">=0.5.24"  # No updates required

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"  # No updates required
mypy = "^1.1.1"  # No updates required
flake8 = "^6.0.0"  # No updates required

[tool.poetry.group.types.dependencies]
types-flask = "^1.1.6"  # No updates required
types-requests = "^2.28.11.15"  # No updates required
types-orjson = "^3.6.2"  # No updates required
types-botocore = "^1.0.2"  # No updates required
types-pyyaml = "^6.0.12.8"  # No updates required
types-flask-cors = "^3.0.10.3"  # No updates required
types-boto3 = "^1.0.2"  # No updates required
types-python-dateutil = "^2.8.19.10"  # No updates required

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
