[tool.poetry]
name = "simdata-api"
version = "0.1.0"
description = ""
authors = ["Jim Schaff <schaff.jim@gmail.com>"]
readme = "README.md"
packages = [{ include = "simdata_api" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pyyaml = "^6.0.1"
pydantic = "^2.5.3"
h5py = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
